Added temporary styling for home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="page-title" id="pageTitle">Jason's Wings N Booze</div>
+    <div class="page-title" id="pageTitle">Burgers N' Booze</div>
     <div id="testimonial"></div>
 
     <div class="page-tabs" id="pageTabs">
@@ -16,7 +16,14 @@
         <div class="contact-tab" id="contactTab">Contact</div>
     </div>
 
+    <div class="testimonial-container">
+        <div class="testimonial-body">
+            <p>"This is by far the best Wendy's I have ever eaten at. The burgers are awesome, but the booze is just out of this world! If you're looking for tasty burgers and ice cold beer, then this is the place! Oh wait...this isn't a Wendy's?"</p>
+            <h4>-Some Drunk Guy</h4>
+        </div>
 
+        <img src="/src/images/man-drinking.jpg" alt="Some drunk guy">
+    </div>
 
 
 
