Added temporary presentation container

--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
         <img src="/src/images/man-drinking.jpg" alt="Some drunk guy">
     </div>
 
+    <div class="presentation-container">
+        <div class="food-row">
+            <img src="/src/images/burger2.jpg" alt="a tasty burger">
+            <div class="food-description">
+                <h2 class="description-header">Best Burgers In Town</h2>
+                <p class="description-body">Here at Burgers N' Booze, we have perfected the craft of burger-making. With our wide variety of burgers, we are sure to have something to satisfy your palatte!</p>
+            </div>
+        </div>
+
+        <div class="drink-row">
+            <img src="/src/images/booze.jpg" alt="assortment of alcoholic beverages">
+            <div class="drink-description">
+                <h2 class="description-header">Wide Selection Of Drinks</h2>
+                <p class="description-body">Where would Burgers N' Booze be without the booze? In the mood for an ice cold beer? Maybe a glass of Jack and Coke? Our well-trained bartenders can create anything to your liking! </p>
+            </div>
+        </div>
+
+        <div class="transport-row">
+            <img src="/src/images/passed-out.jpg" alt="passed out person">
+            <div class="transport-description">
+                <h2 class="description-header">World-class Transport Service</h2>
+                <p class="description-body">So you had a little too much to drink and you have to get home? We have you covered! Just provide your address before dining with us and one of our skilled drivers will carry your lifeless body home safe and sound!</p>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="main.js"></script>
