Added info section, footer, favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/000000/hamburger.png" sizes="32x32">
+    <title>Burgers N' Booze</title>
 </head>
 <body>
     <div class="page-title" id="pageTitle">Burgers N' Booze</div>
@@ -18,6 +19,7 @@
 
     <div class="testimonial-container">
         <div class="testimonial-body">
+            <h2>Testimonial</h2>
             <p>"This is by far the best Wendy's I have ever eaten at. The burgers are awesome, but the booze is just out of this world! If you're looking for tasty burgers and ice cold beer, then this is the place! Oh wait...this isn't a Wendy's?"</p>
             <h4>-Some Drunk Guy</h4>
         </div>
@@ -30,7 +32,7 @@
             <img src="/src/images/burger2.jpg" alt="a tasty burger">
             <div class="food-description">
                 <h2 class="description-header">Best Burgers In Town</h2>
-                <p class="description-body">Here at Burgers N' Booze, we have perfected the craft of burger-making. With our wide variety of burgers, we are sure to have something to satisfy your palatte!</p>
+                <p class="description-body">Here at Burgers N' Booze, we have perfected the craft of burger-making. With our wide variety of burgers, we are sure to have something to satisfy your palate!</p>
             </div>
         </div>
 
@@ -50,6 +52,39 @@
             </div>
         </div>
     </div>
+
+    <div class="info-container">
+        <div class="hours">
+            <h2>Hours</h2>
+            <h4>Monday: 10:00AM - 11:00PM</h4>
+            <h4>Tuesday: 10:00AM - 11:00PM</h4>
+            <h4>Wednesday: 10:00AM - 11:00PM</h4>
+            <h4>Thursday: 10:00AM - 11:00PM</h4>
+            <h4>Friday: 10:00AM - 3:00AM</h4>
+            <h4>Saturday: 10:00AM - 3:00AM</h4>
+            <h4>Sunday: 10:00AM - 12:00AM</h4>
+        </div>
+
+        <div class="location">
+            <div class="address">
+                <h2>Location</h2>
+                <h4>456 Arrowridge Street</h4>
+                <h4>Los Angeles, California</h4>
+            </div>
+
+            <div class="contact">
+                <h2>Contact</h2>
+                <h4>Jason Mobley</h4>
+                <h4>Restaurant Owner</h4>
+                <h4>(323) 555 - 5555</h4>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <h4>Burgers N' Booze 2022 &copy;</h4>
+        <h4>Created By Jason Mobley (via The Odin Project)</h4>
+    </footer>
 
 
 
